# Fluno-lang

./: .gitignore  Cargo.toml  LICENSE  LSP_USAGE.md  README.md
.github/workflows/: release.yaml  release.yml
benches/: tensor_bench.rs  tensor_bench_v2.rs
demo/: README.md  bayesian_coin.fln  epiphany.fln  fluent_talker.fln  gen_mnist_json.py  gen_philosophy.py  grammar_data.json  linear_regression.fln  match_test.fln  mnist_data.json  mnist_wgi.fln  multiclass.fln  philosophy_data.json  retinawave_ai.fln  retinawave_ai_minimal.fln  retinawave_bundled.fln  semantic_epiphany.fln  sensor_fusion.fln  test_assignments.fln  test_regions.fln  test_types.fln  vision_test.fln
documents/: Flux言語仕様書 補遺：確率推論と自動微分アーキテクチャ.md  final_report.md  fluxver2.md  formal_verification_plan.md
documents/Fluno_Book/: 01_introduction.md  02_basic_concepts.md  03_memory_management.md  04_structs_enums.md  05_modules.md  06_probabilistic.md  07_reactive.md  08_autodiff.md  README.md  appendix_a_keywords.md  appendix_b_stdlib.md
editors/vscode/: extension.js  package-lock.json  package.json
examples/: bayesian_regression.fln  test_async.fln
examples/test_async_build/: Cargo.toml
fluno-formalization/: Makefile
fluno-formalization/theories/: .Base.aux  .Probability.aux  .Semantics.aux  .Soundness.aux  .Syntax.aux  .Typing.aux  Base.glob  Base.v  Base.vo  Effects.v  Examples.v  Probability.glob  (+15 more)
fluno-rt/: Cargo.toml
src/: gc_cycle_tests.rs  gc_store_tests.rs  gc_tests.rs  lib.rs  main.rs  manifest.rs  prelude.rs
test/: api.rs  perser.rs  trait.rs  type.rs
tests/: von_mises.fln
(+129 files in other folders)
