[package]
name = "fluno"
version = "0.1.0"
edition = "2021"
authors = ["Soichiro_N"]
description = "Compiler and interpreter for the Fluno programming language"
license = "MIT"
keywords = ["compiler", "interpreter", "probabilistic", "reactive", "robotics"]
categories = ["compilers", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
libloading = "0.8"
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
statrs = "0.18.0"
thiserror = "1.0"
toml = "0.9.11"
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "fluno"
path = "src/main.rs"

[lib]
name = "fluno"
path = "src/lib.rs"

[[bench]]
name = "tensor_bench"
harness = false

[[bench]]
name = "tensor_bench_v2"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
